--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -19,6 +19,7 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         
-        <Label Grid.Row="1" Grid.Column="1" Content="Hello World!"/>
+
+        <Button Grid.Row="1" Grid.Column="1" Content="Clickable" Click="Button_Click"></Button>
     </Grid>
 </Window>
